--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="row">
             <div class="col-md-6">
             	<div class="row">
-            		<p>This map has focuses crashes on the nearest 'node' in the road network. It's an attempt to identify areas that have more crashes than others, and allows the exploration of the crash data by providing Google Streetview at specific sites.</p>
+            		<p>This map locates crashes at the nearest 'node' in the road network. It's an attempt to identify areas that have more crashes than others. These crash locations are colour coded (zoom in to see, red means more) and allows the exploration of the crash data by providing Google Streetview at specific sites.</p>
             	</div>
 				<div class="row">
 					<div id="Table">
@@ -82,7 +82,7 @@
        <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Produced by <a href="http://agl.pw">Alex Leith</a></p>
+                    <p>Produced by <a href="http://agl.pw">Alex Leith</a>, data from <a href="http://www.stategrowth.tas.gov.au/">DSG</a> and <a href="http://listdata.thelist.tas.gov.au/opendata/">LIST</a>.</p>
                 </div>
             </div>
             <!-- /.row -->
@@ -246,7 +246,6 @@
 
 	<!-- load the data -->
 	<script type="text/javascript" src="data.geojson"></script>
-
 
 </body>
 
